/* Copyright (c) 2024 FIAP. All rights reserved. */
package br.com.fiap.susconnect.aps.core.domain;

public enum PriorityLevel {
  HIGH,
  MEDIUM,
  LOW
}
