%% Modelo de Domínio - SUS-Connect APS MVP (Fase 05)

classDiagram
    class Territory {
        +UUID id
        +String code
        +String name
        +String unitName
        +BigDecimal linkedPopulationPercent
        +YearMonth dataCompetence
        +List~PreventiveIndicator~ indicators
        +create(code, name, ...) Territory$
        +reconstruct(id, ...) Territory$
        +withIndicators(...) Territory
    }

    class PreventiveIndicator {
        <<record>>
        +PreventiveFocus focus
        +BigDecimal score
        +BigDecimal target
        +isBelowTarget() boolean
    }

    class PreventiveFocus {
        <<enum>>
        CHRONIC_CONDITIONS
        PRENATAL
        CHILD_VACCINATION
        CYTOPATHOLOGY
        +label() String
    }

    class PriorityLevel {
        <<enum>>
        HIGH
        MEDIUM
        LOW
    }

    class PriorityAssessment {
        +PriorityLevel level
        +BigDecimal linkageTarget
        +List~String~ reasons
        +List~PreventiveIndicator~ belowTargetIndicators
    }

    class PriorityCalculator {
        -BigDecimal linkageTarget
        +assess(Territory) PriorityAssessment
    }

    class SearchAction {
        +UUID id
        +UUID territoryId
        +PreventiveFocus focus
        +String objective
        +String responsibleTeam
        +LocalDate plannedStart
        +LocalDate plannedEnd
        +int targetCount
        +int performedCount
        +ActionStatus status
        +String notes
        +String resultNotes
        +LocalDateTime createdAt
        +LocalDateTime updatedAt
        +create(...) SearchAction$
        +reconstruct(...) SearchAction$
        +updateProgress(status, count, notes)
        +progressPercent() BigDecimal
        +isOverdue(Clock) boolean
    }

    class ActionStatus {
        <<enum>>
        PLANNED
        IN_PROGRESS
        COMPLETED
        CANCELLED
    }

    Territory "1" --> "1..*" PreventiveIndicator : contains
    PreventiveIndicator --> PreventiveFocus : uses
    PriorityCalculator --> Territory : assesses
    PriorityCalculator --> PriorityAssessment : produces
    PriorityAssessment --> PriorityLevel : classifies as
    PriorityAssessment --> PreventiveIndicator : highlights
    SearchAction --> PreventiveFocus : targets
    SearchAction --> ActionStatus : has
    SearchAction --> Territory : belongs to (territoryId)
